# radisk

./: .SRCINFO  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PKGBUILD  README.md  install.sh
.cargo/: config.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
docs/: CONFIG.md  KEYBINDS.md  SNAPSHOT_FORMAT.md  config.example.toml
examples/: bench_scan.rs
homebrew/: radisk.rb
nix/: default.nix
scoop/: radisk.json
src/: app.rs  color.rs  config.rs  context_menu.rs  delete.rs  diff.rs  keybinds.rs  main.rs  mounts.rs  ownership.rs  pacman.rs  picker.rs  radial.rs  renderer.rs  scanner.rs  scanner_streaming.rs  snapshot.rs  theme.rs  tree.rs  ui.rs  views.rs  walker.rs
winget/mimobn/radisk/0.1.0/: mimobn.radisk.installer.yaml  mimobn.radisk.yaml
