[package]
name = "radisk"
version = "0.1.0"
edition = "2021"
description = "Terminal-based radial disk usage visualizer inspired by KDE FileLight"
authors = ["mimobn <mimobn2004@gmail.com>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/mimobn/radisk"
homepage = "https://github.com/mimobn/radisk"
readme = "README.md"
keywords = ["disk-usage", "cli", "visualization", "tui", "ascii"]
categories = ["command-line-utilities"]

[package.metadata.aur]
depends = ["gcc-libs"]
makedepends = ["cargo"]

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
palette = "0.7"
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1.0.102"
thiserror = "2.0.18"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
directories = "6.0.0"
globset = "0.4.18"
postcard = { version = "1.1.3", features = ["alloc"] }
zstd = "0.13.3"
nix = { version = "0.31.2", features = ["fs"] }
clap_mangen = "0.3.0"

[dev-dependencies]
tempfile = "3"
assert_fs = "1"
approx = "0.5"
jwalk = "0.8.1"
